- home transactions UI changes

--- a/src/app/home-expenses/home-expenses.component.html
+++ b/src/app/home-expenses/home-expenses.component.html
@@ -8,6 +8,10 @@
       <span class="">To Date:&nbsp;&nbsp;</span>
       <p-calendar [(ngModel)]="toDate" [monthNavigator]="true" [yearNavigator]="true" yearRange="2000:2030" [showIcon]="true"></p-calendar>
     </div>
+    <div class="ui-g-3">
+      <span class="">Account Type:&nbsp;&nbsp;</span>
+      <p-dropdown [options]="accountTypes" [(ngModel)]="selectedAccountType" placeholder="Account Type" optionLabel="Type" [showClear]="true" (onChange)="accountTypeSelected()"></p-dropdown>
+    </div>
     <div class="ui-g-2">
       <span class="">Account:&nbsp;&nbsp;</span>
       <p-dropdown [options]="accounts" [(ngModel)]="selectedAccount" placeholder="Account" optionLabel="DisplayName" [showClear]="true"></p-dropdown>
@@ -16,7 +20,7 @@
       <p-button (onClick)="getTransactions()" *ngIf="!saveDisabled" icon="pi pi-refresh" iconPos="right" label="Refresh"></p-button>
     </div>
   </div>
-  <div class="ui-g-12">
+  <div class="ui-g-12" *ngIf="selectedAccount && transactions">
     <p-table [columns]="cols" [value]="transactions" [scrollable]="true" scrollHeight="350px" [resizableColumns]="true"
              selectionMode="single" [(selection)]="selectedTransaction" (onRowSelect)="onRowSelect($event)">
       <ng-template pTemplate="colgroup" let-columns>
@@ -41,6 +45,13 @@
           <td>{{rowData.Amount}}</td>
           <td>{{rowData.Store}}</td>
           <td>{{rowData.TransactedBy}}</td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage" let-columns>
+        <tr>
+          <td [attr.colspan]="columns.length">
+            No records found
+          </td>
         </tr>
       </ng-template>
       <ng-template pTemplate="summary" let-rowData>
@@ -112,5 +123,5 @@
 
 
 <p-sidebar [(visible)]="sidebars.addExpense" *ngIf="sidebars.addExpense" position="right" styleClass="ui-sidebar-sm">
-  <app-expense [transaction]="transaction" (savedTransaction)="getTransactions()"></app-expense>
+  <app-expense [transaction]="transaction" [accountDetails]="selectedAccount" (savedTransaction)="getTransactions()"></app-expense>
 </p-sidebar>
