--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -1,3 +1,19 @@
-<p>
-  accounts works!
-</p>
+<script lang="javascript" src="dist/xlsx.full.min.js"></script>
+<div class="">
+  <span class="">File:</span>
+  <!-- <input class="" type="file" [(ngModel)]="data"/> -->
+  <!-- <input #file type="file" multiple (change)="upload($event,file.files)" />
+  <input type="file" id="file" multiple (change)="getFileDetails($event)">
+  <button (click)="uploadFiles()">Upload</button> -->
+  <!-- <button class=""  (click)="upload()">Upload</button> -->
+
+  <!-- <div ng2FileDrop [ngClass]="{'drop-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)" 
+        [uploader]="uploader" class="area">
+    <div id="dropZone">Drop files here</div>
+  </div>
+
+<input type="file" ng2FileSelect [uploader]="uploader" multiple  />
+<button (click)="upload()">Upload files</button> -->
+
+<input type="file" ng2FileSelect [uploader]="uploader" />
+</div>
