--- a/src/app/home-expenses/home-expenses.component.html
+++ b/src/app/home-expenses/home-expenses.component.html
@@ -41,9 +41,9 @@
           <td>{{rowData.Date | date:'dd-MMM-yyyy'}}</td>
           <td>{{rowData.ExpenseGroup.Name}}</td>
           <td>{{rowData.ExpenseSubGroup.SubGroupName}}</td>
-          <td>{{rowData.Item}}</td>
-          <td>{{rowData.Amount}}</td>
-          <td>{{rowData.Store}}</td>
+          <td>{{rowData.Debit}}</td>
+          <td>{{rowData.Credit}}</td>
+          <td>{{rowData.Balance}}</td>
           <td>{{rowData.TransactedBy}}</td>
         </tr>
       </ng-template>
